added new configuration for maven-surefire-plugin